Ensure main nav dropdown and its divider are properly displayed
Followup to #1106. Contributes to #527.

- Divider used to be invisible. Fixed color.
- Realigned dropdown relative to "Dart 2" toggle to match pre-BS-4 alignment.

--- a/src/_assets/css/_variables.scss
+++ b/src/_assets/css/_variables.scss
@@ -84,6 +84,11 @@ $kbd-bg:                      #333;
 // $pre-border-color:            #ccc !default;
 // $pre-scrollable-max-height:   340px !default;
 
+//== Dropdown
+
+$dropdown-divider-bg: #bbbbbb;
+$dropdown-link-active-color: transparent;
+$dropdown-link-active-bg: transparent;
 
 //== Popovers
 
